# Navigation-of-drone

./: .gitignore  CPP_HELP.txt  CPP_HELPER.txt  FULL-SETUP-INSTRUCTION.txt  README.md  Test.txt
3DModels-Navigation-of-Drones/: GNSS_Antenna_Custom_Mount_to_M100.step  JetsonNano_Mount_to_M100_Fast_Mount_Long.step  JetsonNano_Mount_to_M100_Fast_Mount_Short.step  SafetyAnchor_Mount_to_M100.step  ZED2_Mount_to_M100_Lower_Part.step  ZED2_Mount_to_M100_Lower_Part_Plate.step  ZED2_Mount_to_M100_Upper_Part.step
CMAKE/: CMakeCache.txt
MAIN/: .original_PID.cpp.swl  .original_PID.cpp.swm  .original_PID.cpp.swn  .original_PID.cpp.swo  .original_PID.cpp.swp  .testCopy.cpp.swo  .testCopy.cpp.swp  CMakeLists.txt  CopyThisToCurrentMaster.cpp  FlightLibrary.cpp  FlightLibrary.hpp  MyLibrary.cpp  MyLibrary.hpp  PID_v2.m  ekf.cpp  flight_control_sample.cpp  flight_control_sample.hpp  flight_control_sample_TEMP.cpp  main.cpp  original_PID.cpp
OSDK/: README.md  UserConfig.txt
POZYX/: README.md  README.txt
POZYX/Modifed-Edited-Working/: multitag_positioning_TEST_SETUP.py  multitag_positioning_WITH_TWO.py  orientation_3D_TEST_SETUP.py  pozyx_device_test.py  ready_to_localize_WORKING_SETUP.py  ready_to_range_WORKING_SETUP.py
POZYX/Pozyx-Python-library/: basic_troubleshooting_5a.py  basic_troubleshooting_5e.py  multitag_positioning_WORKING_WITH_0x6e5a_DONT_EDIT_.py  orientation_3D_test.py  ready_to_localize.py
POZYX/Pozyx-Python-library/tutorials/: ready_to_range_MY_TEST.py
POZYX/Pozyx-Python-library/useful/: our_vopy_of_basics.py
POZYX/Python-to-cpp/: Python_to_cpp_Anton.cpp  Python_to_cpp_test.cpp  demo.py  info.txt  multitag_positioning.py  test  testfile.py
POZYX/Python-to-cpp/include/: pyhelper.hpp
SERVER/: Readme.md  cplusplus2.cgi  cplusplus2.cpp
SERVER/cgi-bin/: depthsensinglogs.cgi
SERVER/html/: ajax_info.txt  autoUpdate.js  buttondata.js  index.html  livedata.html  livefeed.txt
SERVER/html/backup/: index.html
TESTS/: .Untitled1.ads  Anton.txt  Check_Wifi.bat  EKF&NonEKFCompare.txt  FlightLibrary.hpp  MyLibrary.cpp  OpenVehicle.bat  PipingTest.py  README.md  arbName.py  dino_example.c  editedForCpp.py  firstOpenGlApp  flight_control_sample.cpp  opengl_test  opengl_test.c  opengl_test2.cpp  original_PID.cpp
TESTS/CPP_EXAMPLE/: CMakeLists.txt  FlightLibrary.cpp  FlightLibrary.hpp  HowToExecute.txt  Makefile  MyLibrary.cpp  MyLibrary.hpp  ZED_Integration  ZED_Tutorial_1_Integration  ZED_Tutorial_1_Integration2  flight_control_sample.cpp  flight_control_sample.hpp  logging_sample.hpp  main.cpp  mainProgram
TESTS/cpp_tests/: MyLibrary.cpp  MyLibrary.hpp  hellolibrary  main.cpp  mainProgram
ZED2/: CMakeCache.txt  README.md
ZED2/Depthsensing_Jake/: CMakeLists.txt  main.cpp
ZED2/Objectdetection_Jake/birds eye viewer/cpp/src/: main.cpp
ZED2/Objectdetection_Jake/image viewer/cpp/src/: main.cpp
ZED2/Positionaltracking_Jake/cpp/: .gitignore.txt  CMakeLists.txt
ZED2/Positionaltracking_Jake/cpp/src/: includetest.hpp  main.cpp  placeholder.hpp
ZED2/zed-examples/object detection/image viewer/cpp/src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
ZED2/zed-examples/tutorials/tutorial 3 - depth sensing/cpp/: main.cpp
